--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
+
+html, body {
+   height: 100%;
+   width: 100%;
+   padding: 5px;
+   box-sizing: border-box;
+   -webkit-overflow-scrolling: touch;
+}
+
+ngb-modal-backdrop {
+    z-index: 1050 !important;
+}
+.popover-body{
+    color: red;
+}
+.wrapper {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  app-contact-list {
+    display: block;
+    height: 100%;
+  }
+
